infrastructure/configs/network-policies/networkpolicy-actualbudget.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-ingress
  namespace: actualbudget
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow traffic from Traefik
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik-system
