infrastructure/configs/network-policies/networkpolicy-servarr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-ingress
  namespace: servarr
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow traffic from Traefik
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik-system
    # Allow DNS
    - from:
        - namespaceSelector:
            matchLabels:
              name: kube-system
      ports:
        - protocol: UDP
          port: 53
